// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntentsAndLabelsItem.vue renders correctly 1`] = `
<bhcard-stub>
  <div class="i-a-l-item">
    <div class="i-a-l-item__main">
      <div><strong>dog</strong></div>
      <div class="i-a-l-item__main__info-wrapper">
        <div class="i-a-l-item__main__info">
          <!----><span><a>Show sentences</a></span></div>
      </div>
    </div>
  </div>
  <!---->
</bhcard-stub>
`;

exports[`IntentsAndLabelsItem.vue renders correctly with diferents props When labelEntities array props have a array. Renders correctly 1`] = `
<bhcard-stub>
  <div class="i-a-l-item">
    <div class="i-a-l-item__main">
      <div><strong>dog</strong></div>
      <div class="i-a-l-item__main__info-wrapper">
        <div class="i-a-l-item__main__info"><span>3 Entities</span> <span><a>Show sentences</a></span></div>
      </div>
    </div>
  </div>
</bhcard-stub>
`;
